# ChessDestroyer

./: .gitignore  Cargo.toml  LICENSE  README.md  imprint.css  imprint.html  landing.css  landing.html  technical_documentation.md  welcome_page.css  welcome_page.html
Rendered-HTML/: game.html
frontend/: game.html
frontend/css/: game.css  main.css
src/: main.rs
src/utils/: db.rs  errors.rs  game.rs  mod.rs  requests.rs  session.rs
src/utils/game/: engine.rs
static/: imprint.html  settings.html  welcome_page.html
static/css/: game.css  imprint.css  landing.css  main.css  settings.css
static/js/: game.js
templates/: game.html.hbs
